syntax = "proto3";

package com.bridge.grpc.helloworld;
//option go_package = ".;hello";

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
}